move tests to standalone django project, add migration

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
   - export PYTHONPATH=./eav/:$PYTHONPATH
   - pip install -U $DJANGO
 script:
-  - python testproject/manage.py test
+  - python tests/manage.py test
