--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,14 @@ language: python
 sudo: false
 python:
   - "2.7"
-  - "3.4"
   - "3.5"
 env:
-  - DJANGO="Django>=1.8,<1.9" DB=sqlite
-  - DJANGO="Django>=1.9,<1.10" DB=sqlite
+  - DJANGO="Django>=1.11,<2.0" DB=sqlite
+  - DJANGO="Django>=2.0,<2.1" DB=sqlite
+matrix:
+  exclude:
+    - python: "2.7"
+      env: DJANGO="Django>=2.0,<2.1" DB=sqlite
 install:
   - export PYTHONPATH=./eav/:$PYTHONPATH
   - pip install -U $DJANGO
